<resources>
    <string name="kdvs">KDVS</string>

    <string name="app_name">@string/kdvs</string>
    <string name="splash">splash</string>

    <string name="title_home">Home</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_favorites">Favorites</string>

    <string name="now_playing">Now Playing:</string>

    <!-- Notification channel -->
    <string name="notification_channel">Now Playing</string>
    <string name="notification_channel_description">Shows what is currently playing on KDVS</string>
    <string name="alarm_channel">Alarm</string>
    <string name="alarm_channel_description">Notifies about live show broadcasts.</string>
    <string name="notification_title_separator">\u0020•\u0020</string>

    <!-- Notification actions -->
    <string name="notification_play">Play</string>
    <string name="notification_pause">Pause</string>
    <string name="notification_stop">Stop</string>
    <string name="notification_live">Go Live</string>
    <string name="notification_replay">Replay</string>
    <string name="notification_forward">Forward</string>

    <!-- Home -->
    <string name="now_playing_header_current">On Now</string>
    <string name="now_playing_header_previous">Previously</string>
    <string name="now_playing_header_next">Up Next</string>

    <string name="now_playing_gradient">gradient</string>
    <string name="contact">Contact</string>
    <string name="duties">Duties</string>
    <string name="office_hours">Office Hours</string>
    <string name="news">News</string>
    <string name="top_adds">Top Adds</string>
    <string name="top_albums">Top Albums</string>
    <string name="staff">Staff</string>
    <string name="studio">Studio</string>
    <string name="business">Business</string>
    <string name="staff_email_icon">email</string>
    <string name="toggle_desc">Hide</string>
    <string name="fundraiser">Fundraiser</string>
    <string name="fundraiser_progress_separator">/</string>
    <string name="fundraiser_link">Pledge</string>
    <string name="fundraiser_dates_same_month">%1$s %2$s–%3$s, %4$d</string>
    <string name="fundraiser_dates_diff_month">%1$s %2$s – %3$s %4$s, %5$d</string>
    <string name="fundraiser_total">$%1$s</string>

    <!-- Settings -->
    <string name="streaming">Streaming</string>
    <string name="codec">Codec</string>
    <string name="download">Download</string>
    <string name="download_location">Set download location</string>
    <string name="notification">Notification</string>
    <string name="notification_time">Time in advance</string>
    <string name="notification_desc">Schedule notifications for your subscribed shows\' broadcasts to occur a set amount of time before they go live.</string>
    <string name="download_desc">Select a folder in your external storage that you wish broadcasts to be downloaded to. By default, they will be downloaded to Music/KDVS.</string>
    <string name="data">Data</string>
    <string name="offline">Offline mode</string>
    <string name="offline_desc">Disable stream, download, and info retrieval functionality. You will still be able to view existing info and play downloaded broadcasts. Helpful for avoiding data usage.</string>
    <string name="info">Info</string>
    <string name="fundraiser_window">Fundraiser display window</string>
    <string name="fundraiser_desc">The number of months before and after a fundraiser in which to display its information on Home.</string>
    <string name="frequency">Update frequency</string>
    <string name="frequency_desc">Set how often you wish app information to be updated. This will keep you more timely informed, but will incur a slight increase in data usage.</string>
    <string name="refresh">Manual refresh</string>
    <string name="refresh_desc">Retrieve the most up-to-date station information. This will incur some slight data usage.</string>
    <string name="appearance">Appearance</string>
    <string name="theme">Schedule theme</string>
    <string name="theme_desc">Set schedule color accent style.</string>
    <string name="about">About</string>
    <string name="contact_devs">Contact app developers</string>
    <string name="contact_devs_desc">Email us comments, feedback, suggestions.</string>
    <string name="reset_settings">Reset settings to default</string>
    <string name="save_settings">Save</string>

    <!-- Schedule -->
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tues">Tues</string>
    <string name="wed">Wed</string>
    <string name="thurs">Thurs</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>

    <string name="_s">S</string>
    <string name="_m">M</string>
    <string name="_t">T</string>
    <string name="_w">W</string>
    <string name="_f">F</string>

    <string name="alternating_every_other">Every other week</string>
    <string name="alternating_num">Every %1$d weeks</string>

    <string name="search_query_hint">Enter a show name</string>
    <string name="filter_query_hint">Filter by</string>

    <string name="hourLabel">%1$02d:00\u0020</string>
    <string name="searchTimeLabel">%1$s, %2$s - %3$s</string>
    <string name="showDayTimeLabel">%1$s, %2$s - %3$s</string>
    <string name="showTimeLabel">%1$s - %2$s</string>
    <string name="thisWeek">This week:</string>
    <string name="nextWeek">Next week:</string>
    <string name="thenWeek">Then:</string>

    <!-- Player -->
    <string name="viewPlaylist">View Playlist</string>

    <string name="broadcast_image">Broadcast image</string>
    <string name="show_time_range">%1$s - %2$s</string>
    <string name="hosts">Hosts:</string>
    <string name="genre_template">Genre: %1$s</string>
    <string name="artist">Artist</string>
    <string name="song">Song</string>
    <string name="airbreak">Airbreak</string>
    <string name="play">Play</string>
    <string name="downloaded">Downloaded</string>
    <string name="live">Live</string>
    <string name="live_template">Live %1$s</string>
    <string name="no_tracks">No tracks available.</string>
    <string name="artist_header">Artist</string>
    <string name="song_header">Song</string>
    <string name="timeslot_desc">Show image</string>
    <string name="timeslot_placeholder">kdvs-image-placeholder</string>
    <string name="export_header">Export</string>

    <string name="show_notification_title">KDVS</string>
    <string name="show_notification_text_live">%1$s is live %2$s!</string>
    <string name="show_notification_text_interval">in %1$d minutes</string>
    <string name="show_notification_text_now">now</string>

    <string name="artwork">artwork</string>
    <string name="track_info_start">%1$s</string>
    <string name="track_info_middle">\u0020• %1$s</string>
    <string name="track_info_separator">•</string>
    <string name="artist_album">%1$s • %2$s</string>
    <string name="album_info">%1$d, %2$s</string>
    <string name="discogs">discogs</string>
    <string name="youtube">youtube</string>
    <string name="spotify">spotify</string>

    <string name="track_comments">\"%1$s\"</string>

    <string name="sort_header">Sort By</string>
    <string name="sort_recent">Time Added</string>
    <string name="sort_date">Date</string>
    <string name="sort_show">Show</string>
    <string name="sort_artist">Artist</string>
    <string name="sort_album">Album</string>
    <string name="sort_track">Track</string>
    <string name="no_favorites">No favorites found.</string>

    <string name="com_spotify_sdk_redirect_scheme">fho</string>
    <string name="com_spotify_sdk_redirect_host">kdvs</string>

    <!-- Favorites -->
    <string name="download_all">Download All</string>
</resources>
