<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".settings.SettingsFragment">

    <data>
        <variable
            name="vm"
            type="fho.kdvs.global.SharedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/spacing_large"
        android:paddingEnd="@dimen/spacing_large"
        android:paddingTop="@dimen/spacing_large"
        android:paddingBottom="@dimen/double_bottom_nav"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/streamingHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/streaming"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            style="@style/TextAppearance.MaterialComponents.Headline6"/>

        <TextView
            android:id="@+id/codec"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginStart="@dimen/spacing_large"
            android:text="@string/codec"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/streamingHeader" />

        <Spinner
            android:id="@+id/codecSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/codec"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/codec" />

        <TextView
            android:id="@+id/downloadHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/codec"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/download"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            style="@style/TextAppearance.MaterialComponents.Headline6"/>

        <TextView
            android:id="@+id/setDownloadLocation"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginStart="@dimen/spacing_large"
            android:text="@string/download_location"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/downloadHeader" />

        <TextView
            android:id="@+id/downloadPath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/spacing_large"
            android:paddingEnd="@dimen/spacing_large"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/setDownloadLocation"
            tools:text="/storage/emulated/0/Download/testing large file path to see if overflow" />

        <TextView
            android:id="@+id/notificationHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/downloadPath"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/notification"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            style="@style/TextAppearance.MaterialComponents.Headline6"/>

        <TextView
            android:id="@+id/notificationTime"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginStart="@dimen/spacing_large"
            android:text="@string/notification_time"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notificationHeader" />

        <Spinner
            android:id="@+id/notificationSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/notificationTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/notificationTime" />

        <TextView
            android:id="@+id/dataHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notificationTime"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/data"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            style="@style/TextAppearance.MaterialComponents.Headline6"/>

        <TextView
            android:id="@+id/dataMetered"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginStart="@dimen/spacing_large"
            android:text="@string/metered"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dataHeader" />

        <Switch
            android:id="@+id/meteredSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/dataMetered"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dataMetered" />

        <TextView
            android:id="@+id/dataRoaming"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginStart="@dimen/spacing_large"
            android:text="@string/roaming"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dataMetered" />

        <Switch
            android:id="@+id/roamingSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/dataRoaming"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dataRoaming" />

        <TextView
            android:id="@+id/infoHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dataRoaming"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/info"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            style="@style/TextAppearance.MaterialComponents.Headline6"/>

        <TextView
            android:id="@+id/fundraiserWindow"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginStart="@dimen/spacing_large"
            android:text="@string/fundraiser_window"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/infoHeader" />

        <Spinner
            android:id="@+id/fundraiserSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/fundraiserWindow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fundraiserWindow" />

        <TextView
            android:id="@+id/frequency"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginStart="@dimen/spacing_large"
            android:text="@string/frequency"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fundraiserWindow" />

        <Spinner
            android:id="@+id/frequencySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/frequency"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/frequency" />

        <TextView
            android:id="@+id/refresh"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginStart="@dimen/spacing_large"
            android:text="@string/refresh"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frequency" />

        <TextView
            android:id="@+id/appearanceHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/refresh"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/appearance"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            style="@style/TextAppearance.MaterialComponents.Headline6"/>

        <TextView
            android:id="@+id/theme"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginStart="@dimen/spacing_large"
            android:text="@string/theme"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appearanceHeader" />

        <Spinner
            android:id="@+id/themeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/theme" />

        <TextView
            android:id="@+id/aboutHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/theme"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/about"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            style="@style/TextAppearance.MaterialComponents.Headline6"/>

        <TextView
            android:id="@+id/contactDevs"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginStart="@dimen/spacing_large"
            android:text="@string/contact_devs"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aboutHeader" />

        <TextView
            android:id="@+id/resetSettings"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginStart="@dimen/spacing_large"
            android:text="@string/reset_settings"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contactDevs" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>