<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sortMenu"
        android:background="@color/colorPrimary"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/searchBar"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_small"
        android:elevation="@dimen/spacing_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:visibility="visible">

        <TextView
            android:id="@+id/sortMenuHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sort_header"
            android:textStyle="bold"
            style="@style/TextAppearance.MaterialComponents.Headline6"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sortRecent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/sortMenuHeader"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/sortRecentText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_extra_large"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/sortRecentButton"
                android:text="@string/sort_recent"
                style="@style/TextAppearance.MaterialComponents.Headline6"/>

            <ImageView
                android:id="@+id/sortRecentButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_upward_white_24dp"
                android:tag="des"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toTopOf="@id/sortRecentText"
                app:layout_constraintBottom_toBottomOf="@id/sortRecentText"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sortShow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/sortRecent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/sortShowText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/sort_show"
                style="@style/TextAppearance.MaterialComponents.Headline6"/>

            <ImageView
                android:id="@+id/sortShowButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:tag="des"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toTopOf="@id/sortShowText"
                app:layout_constraintBottom_toBottomOf="@id/sortShowText"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sortDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/sortShow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/sortDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_extra_large"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/sort_date"
                style="@style/TextAppearance.MaterialComponents.Headline6"/>

            <ImageView
                android:id="@+id/sortDateButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_upward_white_24dp"
                android:tag="des"
                android:visibility="invisible"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toTopOf="@id/sortDateText"
                app:layout_constraintBottom_toBottomOf="@id/sortDateText"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sortArtist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/sortShow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/sortArtistText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_extra_large"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/sort_artist"
                style="@style/TextAppearance.MaterialComponents.Headline6"/>

            <ImageView
                android:id="@+id/sortArtistButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:tag="des"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toTopOf="@id/sortArtistText"
                app:layout_constraintBottom_toBottomOf="@id/sortArtistText"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sortAlbum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/sortArtist"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/sortAlbumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_extra_large"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/sort_album"
                style="@style/TextAppearance.MaterialComponents.Headline6"/>

            <ImageView
                android:id="@+id/sortAlbumButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:tag="des"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toTopOf="@id/sortAlbumText"
                app:layout_constraintBottom_toBottomOf="@id/sortAlbumText"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sortTrack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/sortAlbum"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/sortTrackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_extra_large"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/sort_track"
                style="@style/TextAppearance.MaterialComponents.Headline6"/>

            <ImageView
                android:id="@+id/sortTrackButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:tag="des"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toTopOf="@id/sortTrackText"
                app:layout_constraintBottom_toBottomOf="@id/sortTrackText"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</merge>